<resources>
    <string name="app_name">TheRoomDataBase</string>
    <string name="action_settings">Settings</string>
    <string name="information">Information</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="save_button">Save</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="name_of_room">Name of room</string>
    <string name="size_of_room">Size of room</string>
    <string name="description">Description</string>

</resources>
