<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RoomsActivity"
    tools:showIn="@layout/activity_rooms">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information" />


        <EditText
            android:id="@+id/name_of_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_room"
            android:inputType="text" />

        <EditText
            android:id="@+id/size_of_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size_of_room"
            android:inputType="number"/>

        <EditText
            android:id="@+id/description_of_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text" />


        <Button
            android:id="@+id/save_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>