<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information" />


    <EditText
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temperature"
        android:inputType="number"/>

    <EditText
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/humidity"
        android:inputType="number"/>

    <Spinner
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>


</LinearLayout>